option(
  'tests',
  type: 'boolean',
  value: true,
  description: '是否构建测试用例，默认为true',
)

option(
  'enable_coverage',
  type: 'boolean',
  value: false,
  description: '是否启用代码覆盖率统计，默认为false',
)

option(
  'boost_root',
  type: 'string',
  value: '',
  description: 'Boost include root directory (if not set, uses BOOST_ROOT or system Boost)',
)
