dbus_src_files = files(
  'dispatch/pending_call.cpp',
  'dispatch/timeout.cpp',
  'dispatch/watch.cpp',
  'shm/gvariant_convert.cpp',
  'shm/harbor.cpp',
  'shm/local_msg.cpp',
  'shm/serialize.cpp',
  'shm/shm_tree.cpp',
  'connection.cpp',
  'connection_impl.cpp',
  'error.cpp',
  'match.cpp',
  'message.cpp',
  'signal.cpp',
  'validator.cpp',
)
